--- a/src/index.css
+++ b/src/index.css
@@ -85,9 +85,19 @@
   ::selection {
     background-color: rgba(0, 123, 255, 0.2);
   }
-
 }
 
 .icon-size {
   @apply w-8 h-8 sm:w-12 sm:h-12 md:w-16 md:h-16 lg:w-20 lg:h-20 xl:w-24 xl:h-24;
+}
+
+/* Ocultar scrolll */
+.scroll-oculto {
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scroll-oculto::-webkit-scrollbar {
+  display: none;
 }
