--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,8 @@
   body {
     font-family: "Poppins", sans-serif;
     line-height: 1.6;
-    color: #333;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: #33678a;
   }
 
   ::-webkit-scrollbar {
